--- a/index.html
+++ b/index.html
@@ -1,194 +1,228 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CV Cá Nhân</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-  <header>
-    <h1>Trương Thanh Thiên</h1>
-    <p>Lập trình viên Front-End</p>
-    <p>Email: truongthanhthien1201@gmail.com | SĐT:0386214509
-    </p>
-    <p>Địa chỉ: Lê Hồng Phòn, Dĩ An, Bình Dương | GitHub:  </p>
-  </header>
 
-  <nav>
+  <!-- Navbar -->
+  <nav class="navbar">
     <ul>
-      <li><a href="#about">Giới thiệu</a></li>
-      <li><a href="#skills">Kỹ năng</a></li>
-      <li><a href="#education">Học vấn</a></li>
-      <li><a href="#experience">Kinh nghiệm</a></li>
-      <li><a href="#projects">Dự án</a></li>
-      <li><a href="#certificates">Chứng chỉ</a></li>
-      <li><a href="#languages">Ngôn ngữ</a></li>
-      <li><a href="#interests">Sở thích</a></li>
-      <li><a href="#contact">Liên hệ</a></li>
+      <li><a href="#slide1">Trang Chủ</a></li>
+      <li><a href="#slide2">Giới Thiệu Bản Thân</a></li>
+      <li><a href="#slide3">Sở Thích Cá Nhân</a></li>
+      <li><a href="#slide4">Thông Tin Nghề Nghiệp</a></li>
+      <li><a href="#slide5">Kỹ Năng</a></li>
+      <li><a href="#slide6">Chứng Chỉ</a></li>
+      <li><a href="#slide7">Dự Án</a></li>
+      <li><a href="#slide8">Liên Hệ</a></li>
     </ul>
   </nav>
 
-  <main>
-    <section id="about">
-      <h2>Giới thiệu bản thân</h2>
-      <div class="about-flex">
-        <img src="c:\Users\truon\Downloads\c9faebaa-039b-432b-a506-59b0914838a9.jpg" alt="Ảnh đại diện" class="avatar">
-        <p>
-          Tôi là sinh viên CNTT năm 2 đam mê lập trình web. Tôi đang cố găng học tập để thành thạo HTML, CSS và JavaScript,c#,c++
-         để thực hiện mơ ước của mình và đang tìm kiếm cơ hội thực tập để phát triển kỹ năng lập trình Front-End chuyên nghiệp.
-        </p>
+  <!-- Hero Section -->
+   
+  <section id="slide1" class="hero">
+    <div class="hero-text">
+      <p>Hello everybody,</p>
+      <h1 class="glow-animate">Trương Thanh Thiên</h1>
+      <h2>Tôi đang là sinh viên năm hai của UTH</h2>
+      <p class="subtext">và đang trao dồi bản thân để trở thành một Front-end developer (lập trình viên front-end)</p>
+
+      <div class="social-icons">
+        <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://wa.me/" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a>
+        <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
       </div>
-    </section>
 
-    <section id="skills">
-      <h2>Kỹ năng</h2>
-      <ul>
-        <li>HTML, CSS, JavaScript</li>
-        <li>Kỹ năng giao tiếp, làm việc nhóm</li>
-      </ul>
-    </section>
+      <a href="#slide2" class="btn-glow">More About Me</a>
+    </div>
 
-    <section id="education">
-      <h2>Học vấn</h2>
-      <p>Trường Đại học Giao Thông Vận Tải TP.HCM - UTH</p>
-      <p>Ngành: Công Nghệ Thông Tin (2023–2027)</p>
-      <p>GPA: 3.0 / 4.0</p>
-    </section>
+    <div class="hero-img">
+      <div class="circle-avatar"></div>
+    </div>
+  </section>
 
-    <section id="experience">
-      <h2>Kinh nghiệm làm việc</h2>
-      <p><strong>Dự án cá nhân</strong>: Website booking menter</p>
-      <p>Vai trò: Thiết kế và lập trình Front-End</p>
-      <p>Thời gian: 2024</p>
-      <p>Mô tả: Sử dụng HTML, CSS, JavaScript để tạo trang web booking menter đơn giản.</p>
-    </section>
-
-    <section id="projects">
-      <h2>Dự án cá nhân</h2>
-      <div class="project">
-        <h3>Quản lý sinh viên</h3>
-        <p>Công nghệ: HTML, CSS, JavaScript</p>
-        <p>Mô tả: Website quản lý điểm và thông tin sinh viên.</p>
-        <p><a href="#">Link GitHub</a></p>
-      </div>
-      <div class="project">
-        <h3>Landing Page Portfolio</h3>
-        <p>Công nghệ: React, Tailwind</p>
-        <p>Mô tả: Giao diện giới thiệu cá nhân đẹp, responsive.</p>
-        <p><a href="#">Link GitHub</a></p>
-      </div>
-    </section>
-
-    <section id="certificates">
-      <h2>Chứng chỉ</h2>
-<p></p>
-    </section>
-
-    <section id="languages">
-       <section id="languages">
-      <section id="languages">
-  <h2>Ngôn ngữ</h2>
-
-  <div class="skill-bar">
-    <label>HTML</label><br>
-    <input type="range" min="0" max="10" value="8" class="slider">
-    <span class="value">8</span>
-  </div>
-
-  <div class="skill-bar">
-    <label>CSS</label><br>
-    <input type="range" min="0" max="10" value="7" class="slider">
-    <span class="value">7</span>
-  </div>
-
-  <div class="skill-bar">
-    <label>Java</label><br>
-    <input type="range" min="0" max="10" value="6" class="slider">
-    <span class="value">6</span>
-  </div>
-
-  <div class="skill-bar">
-    <label>C#</label><br>
-    <input type="range" min="0" max="10" value="5" class="slider">
-    <span class="value">5</span>
-  </div>
-
-  <div class="skill-bar">
-    <label>C++</label><br>
-    <input type="range" min="0" max="10" value="4" class="slider">
-    <span class="value">4</span>
+  <!-- Slides -->
+ <section id="slide2" class="about-section">
+  <div class="about-container">
+    <div class="about-img">
+      <div class="glow-avatar"></div>
+    </div>
+    <div class="about-text">
+      <h1>About Me</h1>
+      <p>
+       Xin chào! Mình là Trương Thanh Thiên, sinh viên năm hai chuyên ngành Công nghệ Thông tin, năm nay mình 21 tuổi và đến từ Cà Mau.
+      </p>
+      <p>
+      Mình yêu thích lập trình web và đang từng bước phát triển kỹ năng về HTML, CSS, JavaScript cũng như các công nghệ Front-End hiện đại.
+      </P>
+      <p>
+      Mục tiêu của mình là trở thành một Front-end developer (lập trình viên front-end), có thể xây dựng những sản phẩm mang lại trải nghiệm người dùng tốt và hiệu quả. Mình luôn sẵn sàng học hỏi, thích thử thách và đam mê với từng dòng code mình viết.
+      </p>
+      <a href="#slide8" class="btn-glow">More About Me</a>
+    </div>
   </div>
 </section>
 
-    <section id="interests">
-      <section id="so-thich">
-  <h2>Sở thích</h2>
-  <ul class="so-thich-list">
-    <li class="hover-group">
-      🎵 Ca nhạc
-      <ul class="hover-sublist">
-        <li>3107 - Duongg</li>
-        <li>Chạy Về Khóc Với Anh</li>
-        <li>Ngày Mai Người Ta Lấy Chồng</li>
-      </ul>
-    </li>
-    <li class="hover-group">
-      ⚽ Thể thao
-      <ul class="hover-sublist">
-        <li>Bóng đá</li>
-        <li>Cầu lông</li>
-        <li>Bơi lội</li>
-      </ul>
-    </li>
-    <li class="hover-group">
-      📚 Đọc sách
-      <ul class="hover-sublist">
-        <li>Tiểu thuyết</li>
-        <li>Kỹ năng sống</li>
-        <li>Lịch sử</li>
-      </ul>
-    </li>
-    <li class="hover-group">
-      ✈️ Du lịch
-      <ul class="hover-sublist">
-        <li>Đà Lạt</li>
-        <li>Phú Quốc</li>
-        <li>Hội An</li>
-      </ul>
-    </li>
-    <li class="hover-group">
-      🍳 Nấu ăn
-      <ul class="hover-sublist">
-        <li>Món Việt</li>
-        <li>Món Hàn</li>
-        <li>Đồ ăn vặt</li>
-      </ul>
-    </li>
-  </ul>
+<section id="slide3" class="hobby-section">
+  <h1>Sở Thích Cá Nhân</h1>
+  <div class="hobby-gallery">
+    <div class="hobby-card">
+      <img src="c:\Users\truon\Downloads\download (2).jpg" alt="Hobby 1">
+      <p>Xem phim</p>
+    </div>
+    <div class="hobby-card">
+      <img src="c:\Users\truon\Downloads\download (3).jpg" alt="Hobby 2">
+      <p>Nghe nhạc</p>
+    </div>
+    <div class="hobby-card">
+      <img src="c:\Users\truon\Downloads\Floating Scroll_ China-Chic Elegance _ TheCandie_com.jpg" alt="Hobby 3">
+      <p>Thiết kế đồ họa</p>
+    </div>
+    <div class="hobby-card">
+      <img src="c:\Users\truon\Downloads\download (4).jpg" alt="Hobby 4">
+      <p>Du lịch</p>
+    </div>
+  </div>
 </section>
 
-    </section>
+  <section id="slide4" class="career-section">
+  <div class="career-container">
+    <div class="career-img">
+      <img src="c:\Users\truon\Downloads\Coding in Seconds is Now Possible Thanks to a New AI Model.jpg" alt="Lập trình viên chuyên nghiệp">
+    </div>
+    <div class="career-text">
+      <h1>Front-end developer</h1>
+      <p>
+    Front-End Developer là người chịu trách nhiệm xây dựng giao diện người dùng (UI) của website hoặc ứng dụng web. Họ hiện thực hóa bản thiết kế bằng mã code để tạo ra những trang web đẹp, mượt mà, dễ sử dụng và hiển thị tốt trên mọi thiết bị (PC, tablet, smartphone).
+      </p>
+      <p>
+        - Kỹ năng cần có:
+      </p>
+      <P>
+        - HTML5, CSS3, JavaScript
+      </P>
+      <P>
+        - Biết sử dụng React.js, Vue.js hoặc framework tương tự
+      </P>
+      <P>
+        - Tư duy UI/UX tốt, hiểu hành vi người dùng
+      </P>
+      <P>
+        - Làm web responsive, xử lý tương thích trình duyệt
+      </P>
+      <P>
+        - Quản lý mã nguồn bằng Git, sử dụng công cụ build hiện đại
+      </p>
+      <P>Front-End Developer đóng vai trò là cầu nối giữa người dùng và hệ thống. Một sản phẩm có giao diện tốt sẽ nâng cao trải nghiệm người dùng, tăng tính chuyên nghiệp và giữ chân khách hàng. Vì vậy, lập trình viên Front-End giữ vị trí thiết yếu trong mọi dự án phát triển web hiện đại.
 
-    <section id="contact">
-      
+</P>
+    </div>
+  </div>
+</section>
+
+
+
+ <section id="slide5" class="skills-section">
+  <h1>Kỹ Năng</h1>
+  <div class="skills-container">
+    <div class="skills-left">
+      <!-- Progress bars -->
+      <div class="skill-bar">
+        <label><i class="fab fa-html5"></i> HTML</label>
+        <div class="bar"><div class="progress" data-percent="90%"></div></div>
+      </div>
+      <div class="skill-bar">
+        <label><i class="fab fa-css3-alt"></i> CSS</label>
+        <div class="bar"><div class="progress" data-percent="60%"></div></div>
+      </div>
+      <div class="skill-bar">
+        <label><i class="fab fa-js-square"></i> JavaScript</label>
+        <div class="bar"><div class="progress" data-percent="45%"></div></div>
+      </div>
+      <div class="skill-bar">
+        <label><i class="fab fa-python"></i> Python</label>
+        <div class="bar"><div class="progress" data-percent="50%"></div></div>
+      </div>
+      <div class="skill-bar">
+        <label><i class="fab fa-react"></i> React</label>
+        <div class="bar"><div class="progress" data-percent="75%"></div></div>
+      </div>
+    </div>
+
+    <div class="skills-right">
+      <!-- Circle skills -->
+      <div class="circle" data-percent="90"><span>Creativity</span></div>
+      <div class="circle" data-percent="80"><span>Communication</span></div>
+      <div class="circle" data-percent="75"><span>Problem Solve</span></div>
+      <div class="circle" data-percent="85"><span>Teamwork</span></div>
+    </div>
+  </div>
+</section>
+
+ <section id="slide6" class="cert-section">
+  <h1>Chứng Chỉ</h1>
+  <div class="cert-placeholder">
+    <i class="fas fa-certificate"></i>
+    <p>Hiện tại tôi chưa có chứng chỉ nào chính thức, nhưng tôi đang học hỏi và tích lũy từng ngày.</p>
+    <span class="note">Hãy quay lại sau để xem những thành quả mới nhé!</span>
+  </div>
+</section>
+
+  <section id="slide7" class="project-section">
+  <h1>Dự Án</h1>
+  <div class="project-card">
+    <div class="project-image">
+      <img src="c:\Users\truon\Downloads\Headless CMS explained_ The secret behind e-commerce success.jpg" alt="Booking Mentor Project">
+    </div>
+    <div class="project-info">
+      <h2>Booking Mentor</h2>
+      <p>
+        Dự án web ứng dụng cho phép người dùng đặt lịch học/kèm trực tuyến với mentor theo chuyên ngành.
+        Giao diện hiện đại, tích hợp xác thực người dùng, quản lý lịch và kết nối qua email.
+      </p>
+      <a href="https://github.com/NguyenAn3001/ProjectWebUTH" target="_blank" class="github-link">
+        <i class="fab fa-github"></i> Xem GitHub
+      </a>
+    </div>
+  </div>
+</section>
+
+  <section id="slide8" class="contact-section">
+  <div class="contact-container">
+    <div class="contact-info">
+      <p>Nếu bạn có bất kỳ câu hỏi hoặc muốn hợp tác, hãy liên hệ với tôi qua thông tin dưới đây hoặc sử dụng biểu mẫu.</p>
+      <p><i class="fas fa-envelope"></i> truongthanhthien1201@gmail.com</p>
+      <p><i class="fas fa-phone"></i> 0386214509</p>
+
+      <div class="social-icons">
+        <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://wa.me/" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a>
+        <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+      </div>
+    </div>
+
+    <form class="contact-form">
+      <input type="text" placeholder="Enter Your Name" required>
+      <input type="email" placeholder="Enter Your Email" required>
+      <input type="text" placeholder="Enter Your Subject" required>
+      <textarea placeholder="Enter Your Message" required></textarea>
+      <button type="submit">Submit</button>
+    </form>
+  </div>
 
   <footer>
-    <p>&copy; <span id="year"></span> Trương Thanh Thiên</p>
-    <div class="social-links">
-      <a href="https://zalo.me/yourid" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Icon_of_Zalo.svg" alt="Zalo">
-      </a>
-      <a href="https://facebook.com/yourusername" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook">
-      </a>
-  <a href="https://github.com/yourusername" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733553.png" alt="GitHub">
-  </a>
-</div>
+    <p>Front end developer Thanh Thiên</p>
   </footer>
+</section>
+
 
   <script src="script.js"></script>
 </body>
 </html>
-
