--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <h1>Sở Thích Cá Nhân</h1>
   <div class="hobby-gallery">
     <div class="hobby-card">
-      <img src="c:\Users\truon\Downloads\download (2).jpg" alt="Hobby 1">
+      <img src="c:\Users\truon\Downloads\˚⭑· ͟͟͞͞➳ ᴬⁱ ᴬʳᵗ.jpg" alt="Hobby 1">
       <p>Xem phim</p>
     </div>
     <div class="hobby-card">
