--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     </div>
 
     <div class="hero-img">
-      <div class="circle-avatar"></div>
+      <div class="circle-avatar">
+      </div>
     </div>
   </section>
 
@@ -73,19 +74,19 @@
   <h1>Sở Thích Cá Nhân</h1>
   <div class="hobby-gallery">
     <div class="hobby-card">
-      <img src="c:\Users\truon\Downloads\˚⭑· ͟͟͞͞➳ ᴬⁱ ᴬʳᵗ.jpg" alt="Hobby 1">
+      <img src="./anh/anh1 (2).jpg" alt="Hobby 1">
       <p>Xem phim</p>
     </div>
     <div class="hobby-card">
-      <img src="c:\Users\truon\Downloads\download (3).jpg" alt="Hobby 2">
+      <img src="./anh/anh2.jpg" alt="Hobby 2">
       <p>Nghe nhạc</p>
     </div>
     <div class="hobby-card">
-      <img src="c:\Users\truon\Downloads\Floating Scroll_ China-Chic Elegance _ TheCandie_com.jpg" alt="Hobby 3">
+      <img src="./anh/anh3.jpg" alt="Hobby 3">
       <p>Thiết kế đồ họa</p>
     </div>
     <div class="hobby-card">
-      <img src="c:\Users\truon\Downloads\download (4).jpg" alt="Hobby 4">
+      <img src="./anh/anh4.jpg" alt="Hobby 4">
       <p>Du lịch</p>
     </div>
   </div>
@@ -94,7 +95,7 @@
   <section id="slide4" class="career-section">
   <div class="career-container">
     <div class="career-img">
-      <img src="c:\Users\truon\Downloads\Coding in Seconds is Now Possible Thanks to a New AI Model.jpg" alt="Lập trình viên chuyên nghiệp">
+      <img src="./anh/anh5.jpg" alt="Lập trình viên chuyên nghiệp">
     </div>
     <div class="career-text">
       <h1>Front-end developer</h1>
@@ -150,7 +151,7 @@
         <div class="bar"><div class="progress" data-percent="50%"></div></div>
       </div>
       <div class="skill-bar">
-        <label><i class="fab fa-react"></i> React</label>
+        <label><i class="fab fa-c++"></i> C++</label>
         <div class="bar"><div class="progress" data-percent="75%"></div></div>
       </div>
     </div>
@@ -178,7 +179,7 @@
   <h1>Dự Án</h1>
   <div class="project-card">
     <div class="project-image">
-      <img src="c:\Users\truon\Downloads\Headless CMS explained_ The secret behind e-commerce success.jpg" alt="Booking Mentor Project">
+      <img src="./anh/anh6.jpg" alt="Booking Mentor Project">
     </div>
     <div class="project-info">
       <h2>Booking Mentor</h2>
